# noaa-dataset-project

./: .gitignore  README.md  pyproject.toml
data/: NOAA_data_cleaned.csv
data/clean/: NOAA_complete.csv  NOAA_station_analysis.csv  NOAA_wave_analysis.csv  NOAA_wind_analysis.csv
models/: sarimax_model_6h.pkl
notebooks/: dataset_description.ipynb  handling_missing_values.ipynb  prediction_model.ipynb
