[project]
name = "noaa-dataset-project"
version = "0.1.0"
description = "Project for analyzing the NOAA dataset"
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "branca>=0.8.1",
    "folium>=0.20.0",
    "ipykernel>=6.30.0",
    "ipython>=9.4.0",
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "setuptools==66.1.1",
    "statsmodels>=0.14.5",
    "tensorflow>=2.19.0",
    "vmdpy>=0.2",
    "xgboost>=3.0.2",
]
